--- a/src/app/mainsite/above-the-fold/above-the-fold.component.scss
+++ b/src/app/mainsite/above-the-fold/above-the-fold.component.scss
@@ -309,6 +309,12 @@
   }
 }
 
+@media (max-width: 540px) and (max-height: 720px) {
+  .hero-section {
+    padding-top: 100px;
+  }
+}
+
 @media (max-width: 470px) {
   .center-image {
     margin-bottom: 20px;
