--- a/src/app/mainsite/comments/comments.component.scss
+++ b/src/app/mainsite/comments/comments.component.scss
@@ -160,22 +160,46 @@
   }
 }
 
-@media (max-width: 900px){
-.comments-section{
- max-width: 90%;
+@media (max-width: 1280px) and (max-height: 800px) {
+  .comments-section {
+    width: 90%;
+  }
+
+  .comments {
+    width: 90%;
+  }
 }
 
-.comment-content{
-height: fit-content;
+@media (max-width: 900px) {
+  .comments-section {
+    max-width: 90%;
+  }
+
+  .comment-content {
+    height: fit-content;
+  }
+
+  .avatar-container {
+    display: none;
+  }
 }
 
-.avatar-container{
-  display: none;
-}
+@media (max-width: 540px) and (max-height: 720px) {
+  .comments-section {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 @media (max-width: 500px) {
-  .comment-content{
+  .comment-content {
     padding: 24px 40px;
+  }
+}
+
+@media (max-width: 360px) and (max-height: 740px) {
+  .comments-section {
+    margin-left: auto;
+    margin-right: auto;
   }
 }
