--- a/src/app/mainsite/contact/contact.component.scss
+++ b/src/app/mainsite/contact/contact.component.scss
@@ -162,6 +162,7 @@
     min-width: 24px;
     min-height: 24px;
     cursor: pointer;
+    pointer-events: auto;
 
     &:hover {
       background: #183771;
@@ -253,8 +254,21 @@
   }
 }
 
+@media (max-width: 1280px) and (max-height: 800px) {
+  .contact-info {
+    max-width: 1100px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .contact-form {
+    max-width: 400px;
+    margin-right: 0;
+  }
+}
+
 @media (max-width: 1024px) and (max-height: 600px) {
-  .contact-form{
+  .contact-form {
     margin-right: 0;
   }
 }
@@ -299,8 +313,19 @@
   }
 }
 
+@media (max-width: 360px) and (max-height: 740px) {
+  .contact-details-text {
+    width: 100%;
+  }
+
+  .arrow-up {
+    justify-content: flex-end;
+    margin-right: 10px;
+  }
+}
+
 @media (max-width: 365px) and (max-height: 667px) {
-  .contact-form{
+  .contact-form {
     margin-right: 0 !important;
   }
 }
