--- a/src/app/mainsite/header/header.component.scss
+++ b/src/app/mainsite/header/header.component.scss
@@ -150,8 +150,20 @@ a {
 }
 
 @media (max-width: 1280px) and (max-height: 800px) {
-  .header{
+  header {
+    justify-content: flex-start;
+    gap: 100px;
+  }
+
+  .header {
     padding: 15px 150px;
+  }
+}
+
+@media (max-width: 1024px) and (max-height: 600px) {
+  header {
+    justify-content: flex-start;
+    gap: 50px;
   }
 }
 
@@ -186,8 +198,34 @@ a {
   }
 }
 
-@media (max-width: 390px){
-.name-header{
-  flex-direction: column;
+@media (max-width: 390px) {
+  .name-header {
+    flex-direction: column;
+  }
 }
+
+@media (max-width: 390px) and (max-height: 844px) {
+  .name-header {
+    flex-direction: row;
+  }
+}
+
+@media (max-width: 375px) and (max-height: 667px) {
+  header {
+    gap: 20px;
+  }
+}
+
+@media (max-width: 360px) and (max-height: 740px) {
+  header {
+    gap: 10px;
+  }
+
+  .header {
+    padding: 15px 150px;
+  }
+
+  .name-header {
+    flex-direction: row;
+  }
 }
