--- a/src/app/mainsite/portfolio/portfolio.component.scss
+++ b/src/app/mainsite/portfolio/portfolio.component.scss
@@ -224,10 +224,22 @@
 }
 
 @media (max-width: 1280px) and (max-height: 800px) {
-  .project-card{
-   margin-left: auto;
+  .portfolio {
+    background-size: 500px;
   }
- }
+
+  .project-card {
+    margin-left: auto;
+  }
+
+  .project-info {
+    width: 40%;
+  }
+
+  .project-description {
+    width: 90%;
+  }
+}
 
 @media (max-width: 1165px) {
   .portfolio {
@@ -290,7 +302,6 @@
 }
 
 @media (max-width: 365px) and (max-height: 667px) {
-
   .project-img {
     margin-right: 50px;
   }
